# redis-py-entraid

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
.github/workflows/: pypi_publish.yml  tests.yml
entraid/: cred_provider.py  identity_provider.py
examples/: interactive_browser_login.py
redis_entraid/: cred_provider.py  identity_provider.py
tests/: conftest.py  test_cred_provider.py  test_identity_provider.py
