[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-entraid"
version = "1.2.0"
authors = [
  { name="Redis Inc.", email="oss@redis.com" },
]
description = "Entra ID credentials provider implementation for Redis-py client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "redis>=5.3.0",
  "PyJWT~=2.10.0",
  "msal~=1.34.0",
  "azure-identity~=1.25.1",
]

[tool.setuptools.packages.find]
include = ["redis_entraid"]
exclude = ["tests", "examples", ".github"]
